    <https://github.com/jhy/jsoup/pull/942>

  * Bugfix: fixed an issue where the entity resources were left open after startup, causing a warning.
    <https://github.com/jhy/jsoup/pull/928>

  * Bugfix: fixed an issue where Element.getElementsByIndexLessThan(index) would incorrectly provide the root element
    <https://github.com/jhy/jsoup/pull/918>

*** Release 1.10.3 [2017-Jun-11]
  * Added Elements.eachText() and Elements.eachAttr(name), which return a list of Element's text or attribute values,
    respectively. This makes it simpler to for example get a list of each URL on a page:
    List<String> urls = doc.select("a").eachAttr("abs:href"");

  * Improved selector validation for :contains(...) with unbalanced quotes.
    <https://github.com/jhy/jsoup/issues/803>

  * Improved the speed of index based CSS selectors and other methods that use elementSiblingIndex, by a factor of 34x.
    <https://github.com/jhy/jsoup/pull/862>

  * Added Node.clearAttributes(), to simplify removing of all attributes of a Node / Element.
    <https://github.com/jhy/jsoup/issues/829>

  * Bugfix: if an attribute name started or ended with a control character, the parse would fail with a validation
    exception.
    <https://github.com/jhy/jsoup/issues/793>

  * Bugfix: Element.hasClass() and the ".classname" selector would not find the class attribute case-insensitively.
    <https://github.com/jhy/jsoup/issues/814>

  * Bugfix: In Jsoup.Connection, if a redirect contained a query string with %xx escapes, they would be double escaped
    before the redirect was followed, leading to fetching an incorrect location.

  * Bugfix: In Jsoup.Connection, if a request body was set and the connection was redirected, the body would incorrectly
    still be sent.
    <https://github.com/jhy/jsoup/pull/881>

  * Bugfix: In DataUtil when detecting the character set from meta data, and there are two Content-Types defined, use
    the one that defines a character set.