@@ -16,25 +16,30 @@ import java.io.StringReader;
 import java.util.ArrayList;
 import java.util.List;
 
+import static org.jsoup.helper.StringUtil.inSorted;
+import static org.jsoup.helper.StringUtil.sort;
+
 /**
  * HTML Tree Builder; creates a DOM from Tokens.
  */
 public class HtmlTreeBuilder extends TreeBuilder {
-    // tag searches
-    private static final String[] TagsSearchInScope = new String[]{"applet", "caption", "html", "table", "td", "th", "marquee", "object"};
-    private static final String[] TagSearchList = new String[]{"ol", "ul"};
-    private static final String[] TagSearchButton = new String[]{"button"};
-    private static final String[] TagSearchTableScope = new String[]{"html", "table"};
-    private static final String[] TagSearchSelectScope = new String[]{"optgroup", "option"};
-    private static final String[] TagSearchEndTags = new String[]{"dd", "dt", "li", "option", "optgroup", "p", "rp", "rt"};
-    private static final String[] TagSearchSpecial = new String[]{"address", "applet", "area", "article", "aside", "base", "basefont", "bgsound",
-            "blockquote", "body", "br", "button", "caption", "center", "col", "colgroup", "command", "dd",
-            "details", "dir", "div", "dl", "dt", "embed", "fieldset", "figcaption", "figure", "footer", "form",
-            "frame", "frameset", "h1", "h2", "h3", "h4", "h5", "h6", "head", "header", "hgroup", "hr", "html",
-            "iframe", "img", "input", "isindex", "li", "link", "listing", "marquee", "menu", "meta", "nav",
-            "noembed", "noframes", "noscript", "object", "ol", "p", "param", "plaintext", "pre", "script",
-            "section", "select", "style", "summary", "table", "tbody", "td", "textarea", "tfoot", "th", "thead",
-            "title", "tr", "ul", "wbr", "xmp"};
+    // tag searches. must be sorted, used in inSorted
+    private static final String[] TagsSearchInScope = sort(new String[]{"applet", "caption", "html", "table", "td", "th", "marquee", "object"});
+    private static final String[] TagSearchList = sort(new String[]{"ol", "ul"});
+    private static final String[] TagSearchButton = sort(new String[]{"button"});
+    private static final String[] TagSearchTableScope = sort(new String[]{"html", "table"});
+    private static final String[] TagSearchSelectScope = sort(new String[]{"optgroup", "option"});
+    private static final String[] TagSearchEndTags = sort(new String[]{"dd", "dt", "li", "option", "optgroup", "p", "rp", "rt"});
+    private static final String[] TagSearchSpecial = sort(new String[]{"address", "applet", "area", "article", "aside", "base", "basefont", "bgsound",
+        "blockquote", "body", "br", "button", "caption", "center", "col", "colgroup", "command", "dd",
+        "details", "dir", "div", "dl", "dt", "embed", "fieldset", "figcaption", "figure", "footer", "form",
+        "frame", "frameset", "h1", "h2", "h3", "h4", "h5", "h6", "head", "header", "hgroup", "hr", "html",
+        "iframe", "img", "input", "isindex", "li", "link", "listing", "marquee", "menu", "meta", "nav",
+        "noembed", "noframes", "noscript", "object", "ol", "p", "param", "plaintext", "pre", "script",
+        "section", "select", "style", "summary", "table", "tbody", "td", "textarea", "tfoot", "th", "thead",
+        "title", "tr", "ul", "wbr", "xmp"});
+
+    public static final int MaxScopeSearchDepth = 100; // prevents the parser bogging down in exceptionally broken pages
 
     private HtmlTreeBuilderState state; // the current state
     private HtmlTreeBuilderState originalState; // original / marked state
@@ -332,11 +337,12 @@ public class HtmlTreeBuilder extends TreeBuilder {
         }
     }
 
+    // elnames is sorted, comes from Constants
     void popStackToClose(String... elNames) {
         for (int pos = stack.size() -1; pos >= 0; pos--) {
             Element next = stack.get(pos);
             stack.remove(pos);
-            if (StringUtil.in(next.nodeName(), elNames))
+            if (inSorted(next.nodeName(), elNames))
                 break;
         }
     }
@@ -459,14 +465,18 @@ public class HtmlTreeBuilder extends TreeBuilder {
     }
 
     private boolean inSpecificScope(String[] targetNames, String[] baseTypes, String[] extraTypes) {
-        for (int pos = stack.size() -1; pos >= 0; pos--) {
+        int depth = stack.size() -1;
+        if (depth > MaxScopeSearchDepth) {
+            depth = MaxScopeSearchDepth;
+        }
+        for (int pos = depth; pos >= 0; pos--) {
             Element el = stack.get(pos);
             String elName = el.nodeName();
-            if (StringUtil.in(elName, targetNames))
+            if (inSorted(elName, targetNames))
                 return true;
-            if (StringUtil.in(elName, baseTypes))
+            if (inSorted(elName, baseTypes))
                 return false;
-            if (extraTypes != null && StringUtil.in(elName, extraTypes))
+            if (extraTypes != null && inSorted(elName, extraTypes))
                 return false;
         }
         Validate.fail("Should not be reachable");
@@ -505,7 +515,7 @@ public class HtmlTreeBuilder extends TreeBuilder {
             String elName = el.nodeName();
             if (elName.equals(targetName))
                 return true;
-            if (!StringUtil.in(elName, TagSearchSelectScope)) // all elements except
+            if (!inSorted(elName, TagSearchSelectScope)) // all elements except
                 return false;
         }
         Validate.fail("Should not be reachable");
@@ -559,7 +569,7 @@ public class HtmlTreeBuilder extends TreeBuilder {
      */
     void generateImpliedEndTags(String excludeTag) {
         while ((excludeTag != null && !currentElement().nodeName().equals(excludeTag)) &&
-                StringUtil.in(currentElement().nodeName(), TagSearchEndTags))
+                inSorted(currentElement().nodeName(), TagSearchEndTags))
             pop();
     }
 
@@ -571,7 +581,7 @@ public class HtmlTreeBuilder extends TreeBuilder {
         // todo: mathml's mi, mo, mn
         // todo: svg's foreigObject, desc, title
         String name = el.nodeName();
-        return StringUtil.in(name, TagSearchSpecial);
+        return inSorted(name, TagSearchSpecial);
     }
 
     Element lastFormattingElement() {
