@@ -1,7 +1,12 @@
 package org.jsoup.parser;
 
 import org.jsoup.helper.StringUtil;
-import org.jsoup.nodes.*;
+import org.jsoup.nodes.Attribute;
+import org.jsoup.nodes.Attributes;
+import org.jsoup.nodes.Document;
+import org.jsoup.nodes.DocumentType;
+import org.jsoup.nodes.Element;
+import org.jsoup.nodes.Node;
 
 import java.util.ArrayList;
 
@@ -1499,27 +1504,28 @@ enum HtmlTreeBuilderState {
 
     // lists of tags to search through. A little harder to read here, but causes less GC than dynamic varargs.
     // was contributing around 10% of parse GC load.
+    // must make sure these are sorted, as used in findSorted
     private static final class Constants {
-        private static final String[] InBodyStartToHead = new String[]{"base", "basefont", "bgsound", "command", "link", "meta", "noframes", "script", "style", "title"};
-        private static final String[] InBodyStartPClosers = new String[]{"address", "article", "aside", "blockquote", "center", "details", "dir", "div", "dl",
-                "fieldset", "figcaption", "figure", "footer", "header", "hgroup", "menu", "nav", "ol",
-                "p", "section", "summary", "ul"};
-        private static final String[] Headings = new String[]{"h1", "h2", "h3", "h4", "h5", "h6"};
-        private static final String[] InBodyStartPreListing = new String[]{"pre", "listing"};
-        private static final String[] InBodyStartLiBreakers = new String[]{"address", "div", "p"};
-        private static final String[] DdDt = new String[]{"dd", "dt"};
-        private static final String[] Formatters = new String[]{"b", "big", "code", "em", "font", "i", "s", "small", "strike", "strong", "tt", "u"};
-        private static final String[] InBodyStartApplets = new String[]{"applet", "marquee", "object"};
-        private static final String[] InBodyStartEmptyFormatters = new String[]{"area", "br", "embed", "img", "keygen", "wbr"};
-        private static final String[] InBodyStartMedia = new String[]{"param", "source", "track"};
-        private static final String[] InBodyStartInputAttribs = new String[]{"name", "action", "prompt"};
-        private static final String[] InBodyStartOptions = new String[]{"optgroup", "option"};
-        private static final String[] InBodyStartRuby = new String[]{"rp", "rt"};
-        private static final String[] InBodyStartDrop = new String[]{"caption", "col", "colgroup", "frame", "head", "tbody", "td", "tfoot", "th", "thead", "tr"};
-        private static final String[] InBodyEndClosers = new String[]{"address", "article", "aside", "blockquote", "button", "center", "details", "dir", "div",
-                "dl", "fieldset", "figcaption", "figure", "footer", "header", "hgroup", "listing", "menu",
-                "nav", "ol", "pre", "section", "summary", "ul"};
-        private static final String[] InBodyEndAdoptionFormatters = new String[]{"a", "b", "big", "code", "em", "font", "i", "nobr", "s", "small", "strike", "strong", "tt", "u"};
-        private static final String[] InBodyEndTableFosters = new String[]{"table", "tbody", "tfoot", "thead", "tr"};
+        private static final String[] InBodyStartToHead = StringUtil.sort(new String[]{"base", "basefont", "bgsound", "command", "link", "meta", "noframes", "script", "style", "title"});
+        private static final String[] InBodyStartPClosers = StringUtil.sort(new String[]{"address", "article", "aside", "blockquote", "center", "details", "dir", "div", "dl",
+            "fieldset", "figcaption", "figure", "footer", "header", "hgroup", "menu", "nav", "ol",
+            "p", "section", "summary", "ul"});
+        private static final String[] Headings = StringUtil.sort(new String[]{"h1", "h2", "h3", "h4", "h5", "h6"});
+        private static final String[] InBodyStartPreListing = StringUtil.sort(new String[]{"pre", "listing"});
+        private static final String[] InBodyStartLiBreakers = StringUtil.sort(new String[]{"address", "div", "p"});
+        private static final String[] DdDt = StringUtil.sort(new String[]{"dd", "dt"});
+        private static final String[] Formatters = StringUtil.sort(new String[]{"b", "big", "code", "em", "font", "i", "s", "small", "strike", "strong", "tt", "u"});
+        private static final String[] InBodyStartApplets = StringUtil.sort(new String[]{"applet", "marquee", "object"});
+        private static final String[] InBodyStartEmptyFormatters = StringUtil.sort(new String[]{"area", "br", "embed", "img", "keygen", "wbr"});
+        private static final String[] InBodyStartMedia = StringUtil.sort(new String[]{"param", "source", "track"});
+        private static final String[] InBodyStartInputAttribs = StringUtil.sort(new String[]{"name", "action", "prompt"});
+        private static final String[] InBodyStartOptions = StringUtil.sort(new String[]{"optgroup", "option"});
+        private static final String[] InBodyStartRuby = StringUtil.sort(new String[]{"rp", "rt"});
+        private static final String[] InBodyStartDrop = StringUtil.sort(new String[]{"caption", "col", "colgroup", "frame", "head", "tbody", "td", "tfoot", "th", "thead", "tr"});
+        private static final String[] InBodyEndClosers = StringUtil.sort(new String[]{"address", "article", "aside", "blockquote", "button", "center", "details", "dir", "div",
+            "dl", "fieldset", "figcaption", "figure", "footer", "header", "hgroup", "listing", "menu",
+            "nav", "ol", "pre", "section", "summary", "ul"});
+        private static final String[] InBodyEndAdoptionFormatters = StringUtil.sort(new String[]{"a", "b", "big", "code", "em", "font", "i", "nobr", "s", "small", "strike", "strong", "tt", "u"});
+        private static final String[] InBodyEndTableFosters = StringUtil.sort(new String[]{"table", "tbody", "tfoot", "thead", "tr"});
     }
 }
